src/main/java/com/example/stream/spring/courses/reactive/example/model/error/StudentServerError.java
package com.example.stream.spring.courses.reactive.example.model.error;

public record StudentServerError() implements StudentError {
}
